tests/errors/test_10.x
// Attempt to reference a scalar as a function

fn main() -> int {

    let x: int = 21;
    let y: int = x();

}